--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Jonathan Pasco-Arnone">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><b>My first webpage with css</b></title>
-    <link rel="stylesheet" href="mystyle.css" type="text/css" />
+    <link rel="stylesheet" href="mystyle.css">
   </head>
   <body>
     <h1 class="color"> Grrrrrrrrrrreat!</h1>
