--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Jonathan Pasco-Arnone">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><b>My second webpage with css</b></title>
-    <link rel="stylesheet" href="mystyle2.css" type="text/css" />
+    <link rel="stylesheet" href="mystyle2.css">
     <h1>Hello, World!</h1>
   </head>
   <body>
